// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorLinking should be disabled 1`] = `
<WithWidth(AuthorLinking)
  authorList={
    Array [
      Object {
        "rek_author": "Overgaard, Nana H.",
        "rek_author_id": null,
        "rek_author_order": 1,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "Cruz, Jazmina L.",
        "rek_author_id": null,
        "rek_author_order": 2,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "Bridge, Jennifer A.",
        "rek_author_id": null,
        "rek_author_order": 3,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "Nel, Hendrik J.",
        "rek_author_id": null,
        "rek_author_order": 4,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "Frazer, Ian H.",
        "rek_author_id": null,
        "rek_author_order": 5,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "La Gruta, Nicole L.",
        "rek_author_id": null,
        "rek_author_order": 6,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "Blumenthal, Antje",
        "rek_author_id": null,
        "rek_author_order": 7,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "Steptoe, Raymond J.",
        "rek_author_id": null,
        "rek_author_order": 8,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "Wells, James W.",
        "rek_author_id": null,
        "rek_author_order": 9,
        "rek_author_pid": "UQ:654776",
      },
    ]
  }
  classes={
    Object {
      "checkboxChecked": "WithWidth(AuthorLinking)-checkboxChecked-5",
      "checkboxRoot": "WithWidth(AuthorLinking)-checkboxRoot-4",
      "infiniteContainer": "WithWidth(AuthorLinking)-infiniteContainer-1",
      "label": "WithWidth(AuthorLinking)-label-3",
      "root": "WithWidth(AuthorLinking)-root-2",
    }
  }
  disabled={true}
  linkedAuthorIdList={Array []}
  loggedInAuthor={
    Object {
      "aut_id": 410,
    }
  }
  searchKey={
    Object {
      "order": "rek_author_id_order",
      "type": "author",
      "value": "rek_author_id",
    }
  }
/>
`;

exports[`AuthorLinking should render all authors as unlinked and selectable 1`] = `
<WithWidth(AuthorLinking)
  authorList={
    Array [
      Object {
        "rek_author": "Overgaard, Nana H.",
        "rek_author_id": null,
        "rek_author_order": 1,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "Cruz, Jazmina L.",
        "rek_author_id": null,
        "rek_author_order": 2,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "Bridge, Jennifer A.",
        "rek_author_id": null,
        "rek_author_order": 3,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "Nel, Hendrik J.",
        "rek_author_id": null,
        "rek_author_order": 4,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "Frazer, Ian H.",
        "rek_author_id": null,
        "rek_author_order": 5,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "La Gruta, Nicole L.",
        "rek_author_id": null,
        "rek_author_order": 6,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "Blumenthal, Antje",
        "rek_author_id": null,
        "rek_author_order": 7,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "Steptoe, Raymond J.",
        "rek_author_id": null,
        "rek_author_order": 8,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "Wells, James W.",
        "rek_author_id": null,
        "rek_author_order": 9,
        "rek_author_pid": "UQ:654776",
      },
    ]
  }
  classes={
    Object {
      "checkboxChecked": "WithWidth(AuthorLinking)-checkboxChecked-5",
      "checkboxRoot": "WithWidth(AuthorLinking)-checkboxRoot-4",
      "infiniteContainer": "WithWidth(AuthorLinking)-infiniteContainer-1",
      "label": "WithWidth(AuthorLinking)-label-3",
      "root": "WithWidth(AuthorLinking)-root-2",
    }
  }
  disabled={false}
  linkedAuthorIdList={Array []}
  loggedInAuthor={
    Object {
      "aut_id": 410,
    }
  }
  searchKey={
    Object {
      "order": "rek_author_id_order",
      "type": "author",
      "value": "rek_author_id",
    }
  }
/>
`;

exports[`AuthorLinking should render author Bridge as linked 1`] = `
<WithWidth(AuthorLinking)
  authorList={
    Array [
      Object {
        "rek_author": "Overgaard, Nana H.",
        "rek_author_id": null,
        "rek_author_order": 1,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "Cruz, Jazmina L.",
        "rek_author_id": null,
        "rek_author_order": 2,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "Bridge, Jennifer A.",
        "rek_author_id": null,
        "rek_author_order": 3,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "Nel, Hendrik J.",
        "rek_author_id": null,
        "rek_author_order": 4,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "Frazer, Ian H.",
        "rek_author_id": null,
        "rek_author_order": 5,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "La Gruta, Nicole L.",
        "rek_author_id": null,
        "rek_author_order": 6,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "Blumenthal, Antje",
        "rek_author_id": null,
        "rek_author_order": 7,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "Steptoe, Raymond J.",
        "rek_author_id": null,
        "rek_author_order": 8,
        "rek_author_pid": "UQ:654776",
      },
      Object {
        "rek_author": "Wells, James W.",
        "rek_author_id": null,
        "rek_author_order": 9,
        "rek_author_pid": "UQ:654776",
      },
    ]
  }
  classes={
    Object {
      "checkboxChecked": "WithWidth(AuthorLinking)-checkboxChecked-5",
      "checkboxRoot": "WithWidth(AuthorLinking)-checkboxRoot-4",
      "infiniteContainer": "WithWidth(AuthorLinking)-infiniteContainer-1",
      "label": "WithWidth(AuthorLinking)-label-3",
      "root": "WithWidth(AuthorLinking)-root-2",
    }
  }
  disabled={false}
  linkedAuthorIdList={
    Array [
      Object {
        "rek_author_id": 0,
        "rek_author_id_order": 1,
      },
      Object {
        "rek_author_id": 0,
        "rek_author_id_order": 2,
      },
      Object {
        "rek_author_id": 123,
        "rek_author_id_order": 3,
      },
      Object {
        "rek_author_id": 0,
        "rek_author_id_order": 4,
      },
      Object {
        "rek_author_id": 0,
        "rek_author_id_order": 5,
      },
      Object {
        "rek_author_id": 0,
        "rek_author_id_order": 6,
      },
      Object {
        "rek_author_id": 0,
        "rek_author_id_order": 7,
      },
      Object {
        "rek_author_id": 0,
        "rek_author_id_order": 8,
      },
      Object {
        "rek_author_id": 0,
        "rek_author_id_order": 9,
      },
    ]
  }
  loggedInAuthor={
    Object {
      "aut_id": 410,
    }
  }
  searchKey={
    Object {
      "order": "rek_author_id_order",
      "type": "author",
      "value": "rek_author_id",
    }
  }
/>
`;

exports[`AuthorLinking should render authors correctly 1`] = `
<WithWidth(AuthorLinking)
  authorList={
    Array [
      Object {
        "rek_author": "J Smith",
        "rek_author_id": 30445289,
        "rek_author_order": 1,
        "rek_author_pid": "UQ:795480",
        "rek_author_xsdmf_id": null,
      },
      Object {
        "rek_author": "A Smith",
        "rek_author_id": 30445290,
        "rek_author_order": 2,
        "rek_author_pid": "UQ:795480",
        "rek_author_xsdmf_id": null,
      },
    ]
  }
  classes={
    Object {
      "checkboxChecked": "WithWidth(AuthorLinking)-checkboxChecked-5",
      "checkboxRoot": "WithWidth(AuthorLinking)-checkboxRoot-4",
      "infiniteContainer": "WithWidth(AuthorLinking)-infiniteContainer-1",
      "label": "WithWidth(AuthorLinking)-label-3",
      "root": "WithWidth(AuthorLinking)-root-2",
    }
  }
  disabled={false}
  linkedAuthorIdList={
    Array [
      Object {
        "rek_author_id": 1671,
        "rek_author_id_id": 29723144,
        "rek_author_id_lookup": "Brown, Melissa Anne",
        "rek_author_id_order": 1,
        "rek_author_id_pid": "UQ:795480",
        "rek_author_id_xsdmf_id": null,
      },
      Object {
        "rek_author_id": null,
        "rek_author_id_id": 29723145,
        "rek_author_id_order": 2,
        "rek_author_id_pid": "UQ:795480",
        "rek_author_id_xsdmf_id": null,
      },
    ]
  }
  loggedInAuthor={
    Object {
      "aut_id": 410,
    }
  }
  searchKey={
    Object {
      "order": "rek_author_id_order",
      "type": "author",
      "value": "rek_author_id",
    }
  }
/>
`;

exports[`ContributorLinking should be disabled 1`] = `
<WithWidth(AuthorLinking)
  authorList={
    Array [
      Object {
        "rek_contributor": "Overgaard, Nana H.",
        "rek_contributor_id": null,
        "rek_contributor_order": 1,
        "rek_contributor_pid": "UQ:654776",
      },
      Object {
        "rek_contributor": "Cruz, Jazmina L.",
        "rek_contributor_id": null,
        "rek_contributor_order": 2,
        "rek_contributor_pid": "UQ:654776",
      },
      Object {
        "rek_contributor": "Bridge, Jennifer A.",
        "rek_contributor_id": null,
        "rek_contributor_order": 3,
        "rek_contributor_pid": "UQ:654776",
      },
      Object {
        "rek_contributor": "Nel, Hendrik J.",
        "rek_contributor_id": null,
        "rek_contributor_order": 4,
        "rek_contributor_pid": "UQ:654776",
      },
    ]
  }
  classes={
    Object {
      "checkboxChecked": "WithWidth(AuthorLinking)-checkboxChecked-5",
      "checkboxRoot": "WithWidth(AuthorLinking)-checkboxRoot-4",
      "infiniteContainer": "WithWidth(AuthorLinking)-infiniteContainer-1",
      "label": "WithWidth(AuthorLinking)-label-3",
      "root": "WithWidth(AuthorLinking)-root-2",
    }
  }
  disabled={true}
  linkedAuthorIdList={Array []}
  loggedInAuthor={
    Object {
      "aut_id": 410,
    }
  }
  searchKey={
    Object {
      "order": "rek_contributor_id_order",
      "type": "contributor",
      "value": "rek_contributor_id",
    }
  }
/>
`;

exports[`ContributorLinking should render all contributors as unlinked and selectable 1`] = `
<WithWidth(AuthorLinking)
  authorList={
    Array [
      Object {
        "rek_contributor": "Overgaard, Nana H.",
        "rek_contributor_id": null,
        "rek_contributor_order": 1,
        "rek_contributor_pid": "UQ:654776",
      },
      Object {
        "rek_contributor": "Cruz, Jazmina L.",
        "rek_contributor_id": null,
        "rek_contributor_order": 2,
        "rek_contributor_pid": "UQ:654776",
      },
      Object {
        "rek_contributor": "Bridge, Jennifer A.",
        "rek_contributor_id": null,
        "rek_contributor_order": 3,
        "rek_contributor_pid": "UQ:654776",
      },
      Object {
        "rek_contributor": "Nel, Hendrik J.",
        "rek_contributor_id": null,
        "rek_contributor_order": 4,
        "rek_contributor_pid": "UQ:654776",
      },
    ]
  }
  classes={
    Object {
      "checkboxChecked": "WithWidth(AuthorLinking)-checkboxChecked-5",
      "checkboxRoot": "WithWidth(AuthorLinking)-checkboxRoot-4",
      "infiniteContainer": "WithWidth(AuthorLinking)-infiniteContainer-1",
      "label": "WithWidth(AuthorLinking)-label-3",
      "root": "WithWidth(AuthorLinking)-root-2",
    }
  }
  disabled={false}
  linkedAuthorIdList={Array []}
  loggedInAuthor={
    Object {
      "aut_id": 410,
    }
  }
  searchKey={
    Object {
      "order": "rek_contributor_id_order",
      "type": "contributor",
      "value": "rek_contributor_id",
    }
  }
/>
`;

exports[`ContributorLinking should render author Bridge as linked 1`] = `
<WithWidth(AuthorLinking)
  authorList={
    Array [
      Object {
        "rek_contributor": "Overgaard, Nana H.",
        "rek_contributor_id": null,
        "rek_contributor_order": 1,
        "rek_contributor_pid": "UQ:654776",
      },
      Object {
        "rek_contributor": "Cruz, Jazmina L.",
        "rek_contributor_id": null,
        "rek_contributor_order": 2,
        "rek_contributor_pid": "UQ:654776",
      },
      Object {
        "rek_contributor": "Bridge, Jennifer A.",
        "rek_contributor_id": null,
        "rek_contributor_order": 3,
        "rek_contributor_pid": "UQ:654776",
      },
      Object {
        "rek_contributor": "Nel, Hendrik J.",
        "rek_contributor_id": null,
        "rek_contributor_order": 4,
        "rek_contributor_pid": "UQ:654776",
      },
    ]
  }
  classes={
    Object {
      "checkboxChecked": "WithWidth(AuthorLinking)-checkboxChecked-5",
      "checkboxRoot": "WithWidth(AuthorLinking)-checkboxRoot-4",
      "infiniteContainer": "WithWidth(AuthorLinking)-infiniteContainer-1",
      "label": "WithWidth(AuthorLinking)-label-3",
      "root": "WithWidth(AuthorLinking)-root-2",
    }
  }
  disabled={false}
  linkedAuthorIdList={
    Array [
      Object {
        "rek_contributor_id": 0,
        "rek_contributor_id_order": 1,
      },
      Object {
        "rek_contributor_id": 0,
        "rek_contributor_id_order": 2,
      },
      Object {
        "rek_contributor_id": 123,
        "rek_contributor_id_order": 3,
      },
      Object {
        "rek_contributor_id": 0,
        "rek_contributor_id_order": 4,
      },
      Object {
        "rek_contributor_id": 0,
        "rek_contributor_id_order": 5,
      },
      Object {
        "rek_contributor_id": 0,
        "rek_contributor_id_order": 6,
      },
      Object {
        "rek_contributor_id": 0,
        "rek_contributor_id_order": 7,
      },
      Object {
        "rek_contributor_id": 0,
        "rek_contributor_id_order": 8,
      },
      Object {
        "rek_contributor_id": 0,
        "rek_contributor_id_order": 9,
      },
    ]
  }
  loggedInAuthor={
    Object {
      "aut_id": 410,
    }
  }
  searchKey={
    Object {
      "order": "rek_contributor_id_order",
      "type": "contributor",
      "value": "rek_contributor_id",
    }
  }
/>
`;
